Special case when packet->pos==-1

Sometimes video containers report audio packet timestamps as -1,
which was triggering the packet drop code from background track seeking.

Bug: 902634
Change-Id: I2b74fde01f9f2e06aeaf5fa4c2a3a1a4af8ead5d
Reviewed-on: https://chromium-review.googlesource.com/c/1352579
Commit-Queue: Ted Meyer <tmathmeyer@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611923}
Former-commit-id: 6abddce1cf306a668c2e48ab7c364436e084817c